--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,20 +1,32 @@
 {
     "name": "ui",
     "version": "0.0.0",
-    "main": "./index.tsx",
-    "types": "./index.tsx",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": "./dist",
+        "./styles.css": "./dist/styles.css"
+    },
     "license": "MIT",
     "scripts": {
-        "lint": "eslint *.ts*",
+        "build": "tsup src/index.tsx --format esm,cjs --dts --external react && tailwindcss -i ./src/styles.css -o ./dist/styles.css",
+        "dev": "concurrently \"tsup src/index.tsx --format esm,cjs --dts --external react --watch\" \"tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch\"",
+        "clean": "rm -rf dist",
+        "lint": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
         "test": "echo 'no tests yet :('"
     },
     "devDependencies": {
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
+        "concurrently": "^7.4.0",
         "eslint": "^7.32.0",
         "eslint-config-custom": "*",
+        "jest": "^29.1.2",
         "react": "^18.2.0",
+        "tailwind-config": "*",
+        "tailwindcss": "^3.1.8",
         "tsconfig": "*",
+        "tsup": "^6.2.3",
         "typescript": "^4.5.2"
     }
 }
