--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
         "tailwind-config": "*",
         "tailwindcss": "^3.1.8",
         "tsconfig": "*",
+        "types": "*",
         "typescript": "^4.5.3"
     }
 }
