--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,24 +1,23 @@
 {
-    "name": "api",
+    "name": "types",
     "version": "0.0.0",
     "private": true,
+    "exports": {
+        ".": "./dist"
+    },
     "scripts": {
-        "dev": "concurrently --kill-others \"tsc -w\" \"nodemon dist/index.js\"",
-        "build": "tsc --project ./",
-        "start": "node dist/index.js",
+        "dev": "tsc -w",
+        "build": "tsc --project .",
+        "start": "",
         "lint": "eslint . --ext .js,.ts --fix",
         "test": "echo 'no tests yet :('"
     },
     "dependencies": {},
     "devDependencies": {
         "@types/node": "^17.0.12",
-        "concurrently": "^7.4.0",
         "eslint": "7.32.0",
         "eslint-config-custom": "*",
-        "jest": "^29.1.2",
-        "nodemon": "^2.0.20",
         "tsconfig": "*",
-        "types": "*",
         "typescript": "^4.5.3"
     }
 }
