--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -3,6 +3,6 @@
     "compilerOptions": {
         "outDir": "dist"
     },
-    "include": ["index.d.ts", "**/*.ts", "**/*.tsx"],
+    "include": ["index.ts", "**/*.ts", "**/*.tsx"],
     "exclude": ["node_modules", "dist"]
 }
