--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -1,18 +1,20 @@
 name: Unit Tests
 on:
-  push:
-    branches: [ "staging" ]
-  pull_request:
-    branches: [ "staging" ]
+    push:
+        branches:
+            - "**"
+    pull_request:
+        branches:
+            - "**"
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Setup Node
-      uses: actions/setup-node@v3
-      with:
-        node-version: 16
-    - run: yarn
-    - run: yarn lint
-    - run: yarn test
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - name: Setup Node
+              uses: actions/setup-node@v3
+              with:
+                  node-version: 16
+            - run: yarn
+            - run: yarn lint
+            - run: yarn test
