--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -18,3 +18,5 @@ jobs:
             - run: yarn
             - run: yarn lint
             - run: yarn test
+              env:
+                  DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/movies"
