--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "eslint-config-custom": "*",
         "husky": "^8.0.0",
         "prettier": "latest",
+        "prettier-plugin-prisma": "^4.4.0",
         "prettier-plugin-tailwindcss": "^0.1.13",
         "pretty-quick": "^3.1.3",
         "turbo": "latest"
