--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -19,16 +19,19 @@
     },
     "dependencies": {
         "@prisma/client": "^4.4.0",
+        "argon2": "^0.29.1",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
+        "@types/argon2": "^0.15.0",
         "@types/jest": "^29.1.1",
         "@types/node": "^17.0.12",
         "@types/uuid": "^8.3.4",
-        "eslint": "7.32.0",
         "concurrently": "^7.4.0",
+        "eslint": "7.32.0",
         "eslint-config-custom": "*",
         "jest": "^29.1.2",
+        "jest-mock-extended": "^3.0.1",
         "prisma": "^4.4.0",
         "ts-jest": "^29.0.3",
         "tsconfig": "*",
