--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
     "$schema": "https://turborepo.org/schema.json",
     "pipeline": {
         "build": {
-            "dependsOn": ["^build"],
+            "dependsOn": ["lint", "^build"],
             "outputs": ["dist/**", ".next/**"]
         },
         "lint": {
@@ -12,7 +12,9 @@
             "cache": false
         },
         "test": {
-            "outputs": []
+            "outputs": ["coverage/**"],
+            "outputMode": "full"
         }
-    }
+    },
+    "globalEnv": ["NODE_ENV"]
 }
