Split to integration and unit tests Add needed unit tests

--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -13,8 +13,8 @@
         "generate": "npx prisma migrate dev --name init",
         "docker:up": "docker-compose up -d",
         "docker:down": "docker-compose down",
-        "test:integration": "yarn docker:up && (./scripts/prismaRunTestMigrations.sh && jest -i); ret_code=$?; yarn docker:down; exit $ret_code",
-        "test:unit": "echo 'unit tests'",
+        "test:integration": "yarn docker:up && (./scripts/prismaRunTestMigrations.sh && jest -c jest.config.int.js int); ret_code=$?; yarn docker:down; exit $ret_code",
+        "test:unit": "jest -c jest.config.unit.js unit",
         "test": "concurrently \"yarn test:unit\" \"yarn test:integration\""
     },
     "dependencies": {
