--- a/apps/controller/package.json
+++ b/apps/controller/package.json
@@ -1,22 +1,34 @@
 {
-    "name": "api",
+    "name": "controller",
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "dev": "concurrently --kill-others \"tsc -w\" \"nodemon dist/index.js\"",
+        "dev": "nodemon -w src --ext ts --exec ts-node-esm src/index.ts",
         "build": "tsc --project ./",
         "start": "node dist/index.js",
         "lint": "eslint . --ext .js,.ts --fix",
         "test": "echo 'no tests yet :('"
     },
-    "dependencies": {},
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "express-session": "^1.17.3",
+        "helmet": "^6.0.0",
+        "morgan": "^1.10.0"
+    },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.14",
+        "@types/express-session": "^1.17.5",
+        "@types/morgan": "^1.9.3",
         "@types/node": "^17.0.12",
         "concurrently": "^7.4.0",
         "eslint": "7.32.0",
         "eslint-config-custom": "*",
         "jest": "^29.1.2",
         "nodemon": "^2.0.20",
+        "ts-node": "^10.9.1",
         "tsconfig": "*",
         "types": "*",
         "typescript": "^4.5.3"
