--- a/turbo.json
+++ b/turbo.json
@@ -2,8 +2,14 @@
     "$schema": "https://turborepo.org/schema.json",
     "pipeline": {
         "build": {
-            "dependsOn": ["^build"],
+            "dependsOn": ["lint", "^build"],
             "outputs": ["dist/**", ".next/**"]
+        },
+        "controller#build": {
+            "env": ["SESSION_SECRET", "PORT"]
+        },
+        "model#build": {
+            "env": ["DATABASE_URL"]
         },
         "lint": {
             "outputs": []
@@ -12,7 +18,9 @@
             "cache": false
         },
         "test": {
-            "outputs": []
+            "outputs": ["coverage/**"],
+            "outputMode": "full"
         }
-    }
+    },
+    "globalEnv": ["NODE_ENV"]
 }
