Refactor to fit MVC
* Refactor to fit MVC

* Add types package for common types

* Add user stories

* Fix environment variable problem

--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,9 @@
             "dependsOn": ["lint", "^build"],
             "outputs": ["dist/**", ".next/**"]
         },
+        "controller#build": {
+            "env": ["SESSION_SECRET", "PORT"]
+        },
         "lint": {
             "outputs": []
         },
