--- a/apps/controller/package.json
+++ b/apps/controller/package.json
@@ -15,7 +15,8 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "helmet": "^6.0.0",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "tsoa": "^4.1.3"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
@@ -23,7 +24,6 @@
         "@types/express-session": "^1.17.5",
         "@types/morgan": "^1.9.3",
         "@types/node": "^17.0.12",
-        "concurrently": "^7.4.0",
         "eslint": "7.32.0",
         "eslint-config-custom": "*",
         "jest": "^29.1.2",
