--- a/apps/controller/package.json
+++ b/apps/controller/package.json
@@ -7,7 +7,9 @@
         "build": "tsc --project ./",
         "start": "node dist/index.js",
         "lint": "eslint . --ext .js,.ts --fix",
-        "test": "echo 'no tests yet :('"
+        "test:integration": "jest int",
+        "test:unit": "jest unit",
+        "test": "concurrently \"yarn test:unit\" \"yarn test:integration\""
     },
     "dependencies": {
         "cors": "^2.8.5",
@@ -15,19 +17,23 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "helmet": "^6.0.0",
-        "morgan": "^1.10.0",
-        "tsoa": "^4.1.3"
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.14",
         "@types/express-session": "^1.17.5",
+        "@types/jest": "^29.1.2",
         "@types/morgan": "^1.9.3",
         "@types/node": "^17.0.12",
+        "@types/supertest": "^2.0.12",
+        "concurrently": "^7.4.0",
         "eslint": "7.32.0",
         "eslint-config-custom": "*",
         "jest": "^29.1.2",
         "nodemon": "^2.0.20",
+        "supertest": "^6.3.0",
+        "ts-jest": "^29.0.3",
         "ts-node": "^10.9.1",
         "tsconfig": "*",
         "types": "*",
