--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: "3.9"
 services:
+    redis:
+        image: redis:7-alpine
+        restart: always
+        container_name: redis
+        ports: ["6379:6379"]
+        volumes:
+            - ./private/redis:/data
     db:
         image: postgres:14-alpine
         restart: always
@@ -7,4 +14,4 @@ services:
         env_file: ".env"
         ports: ["5432:5432"]
         volumes:
-            - ./pgdata:/var/lib/postgresql/data
+            - ./private/pgdata:/var/lib/postgresql/data
