--- a/apps/controller/package.json
+++ b/apps/controller/package.json
@@ -8,24 +8,29 @@
         "start": "node dist/index.js",
         "lint": "eslint . --ext .js,.ts --fix",
         "test:integration": "jest int",
-        "test:unit": "jest unit",
+        "test:unit": "jest unit --forceExit",
         "test": "concurrently \"yarn test:unit\" \"yarn test:integration\""
     },
     "dependencies": {
+        "connect-redis": "^6.1.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "helmet": "^6.0.0",
+        "ioredis": "^5.2.3",
+        "model": "*",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
+        "@types/connect-redis": "^0.0.18",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.14",
         "@types/express-session": "^1.17.5",
         "@types/jest": "^29.1.2",
         "@types/morgan": "^1.9.3",
         "@types/node": "^17.0.12",
+        "@types/redis": "^4.0.11",
         "@types/supertest": "^2.0.12",
         "concurrently": "^7.4.0",
         "eslint": "7.32.0",
