--- a/apps/model/package.json
+++ b/apps/model/package.json
@@ -11,7 +11,7 @@
         "migrate": "./scripts/prismaRunTestMigrations.sh",
         "docker:up": "docker-compose up -d",
         "docker:down": "docker-compose down",
-        "test:integration": "yarn docker:up && (yarn migrate && jest -c jest.config.int.js int); ret_code=$?; yarn docker:down; exit $ret_code",
+        "test:integration": "jest -c jest.config.int.js int",
         "test:unit": "jest -c jest.config.unit.js unit",
         "test": "concurrently \"yarn test:unit\" \"yarn test:integration\""
     },
