--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,5 +9,8 @@ services:
         image: postgres:14-alpine
         restart: always
         container_name: postgres
-        env_file: ".env"
         ports: ["5432:5432"]
+        environment:
+            - POSTGRES_USER=postgres
+            - POSTGRES_PASSWORD=postgres
+            - POSTGRES_DB=movies
