--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,8 +1,5 @@
 {
     "extends": "tsconfig/nodejs.json",
-    "compilerOptions": {
-        "outDir": "dist"
-    },
-    "include": ["index.ts", "**/*.ts", "**/*.tsx"],
-    "exclude": ["node_modules", "dist"]
+    "include": ["**/*.ts", "**/*.tsx"],
+    "exclude": ["node_modules"]
 }
