--- a/turbo.json
+++ b/turbo.json
@@ -25,6 +25,9 @@
         "test": {
             "outputs": ["coverage/**"],
             "outputMode": "full"
+        },
+        "controller#test": {
+            "env": ["SESSION_SECRET", "PORT", "DATABASE_URL", "REDIS_HOST"]
         }
     },
     "globalEnv": ["NODE_ENV"]
