--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,3 +24,4 @@ jobs:
                   POSTGRES_PASSWORD: postgres
                   POSTGRES_DB: movies
                   DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/movies"
+                  SESSION_SECRET: "random_secret"
