--- a/turbo.json
+++ b/turbo.json
@@ -6,10 +6,18 @@
             "outputs": ["dist/**", ".next/**"]
         },
         "controller#build": {
-            "env": ["SESSION_SECRET", "PORT"]
+            "env": ["SESSION_SECRET", "PORT", "DATABASE_URL", "REDIS_HOST"]
         },
         "lint": {
             "outputs": []
+        },
+        "generate": {
+            "env": ["DATABASE_URL"],
+            "cache": false
+        },
+        "migrate": {
+            "env": ["DATABASE_URL"],
+            "cache": false
         },
         "dev": {
             "cache": false
@@ -17,6 +25,9 @@
         "test": {
             "outputs": ["coverage/**"],
             "outputMode": "full"
+        },
+        "controller#test": {
+            "env": ["SESSION_SECRET", "PORT", "DATABASE_URL", "REDIS_HOST"]
         }
     },
     "globalEnv": ["NODE_ENV"]
