--- a/apps/model/package.json
+++ b/apps/model/package.json
@@ -2,18 +2,16 @@
     "name": "model",
     "version": "0.0.0",
     "private": true,
-    "exports": {
-        ".": "./dist"
-    },
+    "main": "src/index.ts",
+    "types": "src/index.ts",
     "scripts": {
-        "dev": "tsc -w",
         "build": "tsc --project .",
-        "start": "",
         "lint": "eslint . --ext .js,.ts --fix",
-        "generate": "npx prisma migrate dev --name init",
+        "generate": "prisma migrate dev --name init",
+        "migrate": "./scripts/prismaRunTestMigrations.sh",
         "docker:up": "docker-compose up -d",
         "docker:down": "docker-compose down",
-        "test:integration": "yarn docker:up && (./scripts/prismaRunTestMigrations.sh && jest -c jest.config.int.js int); ret_code=$?; yarn docker:down; exit $ret_code",
+        "test:integration": "jest -c jest.config.int.js int",
         "test:unit": "jest -c jest.config.unit.js unit",
         "test": "concurrently \"yarn test:unit\" \"yarn test:integration\""
     },
@@ -35,6 +33,7 @@
         "prisma": "^4.4.0",
         "ts-jest": "^29.0.3",
         "tsconfig": "*",
+        "validation-n-types": "*",
         "typescript": "^4.5.3"
     }
 }
