--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,13 +5,12 @@ services:
         restart: always
         container_name: redis
         ports: ["6379:6379"]
-        volumes:
-            - ./private/redis:/data
     db:
         image: postgres:14-alpine
         restart: always
         container_name: postgres
-        env_file: ".env"
         ports: ["5432:5432"]
-        volumes:
-            - ./private/pgdata:/var/lib/postgresql/data
+        environment:
+            - POSTGRES_USER=postgres
+            - POSTGRES_PASSWORD=postgres
+            - POSTGRES_DB=movies
