--- a/apps/view/package.json
+++ b/apps/view/package.json
@@ -10,9 +10,12 @@
         "test": "echo 'no tests yet :('"
     },
     "dependencies": {
+        "@tanstack/react-query": "^4.10.3",
+        "axios": "^1.1.2",
         "next": "12.3.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hook-form": "^7.37.0",
         "ui": "*"
     },
     "devDependencies": {
