--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
         "prepare": "husky install",
         "docker:up:test": "docker-compose -f docker-compose.test.yml up -d",
         "docker:down:test": "docker-compose -f docker-compose.test.yml down",
+        "docker:up:dev": "docker-compose -f docker-compose.dev.yml up -d",
+        "docker:down:dev": "docker-compose -f docker-compose.dev.yml down",
         "docker:up": "docker-compose up -d",
         "docker:down": "docker-compose down",
-        "dev": "yarn docker:up && (yarn migrate && yarn dev:exec); ret_code=$?; yarn docker:down; exit $ret_code"
+        "dev": "yarn docker:up:dev && (yarn migrate && yarn dev:exec); ret_code=$?; yarn docker:down:dev; exit $ret_code"
     },
     "devDependencies": {
         "eslint-config-custom": "*",
