--- a/turbo.json
+++ b/turbo.json
@@ -2,17 +2,33 @@
     "$schema": "https://turborepo.org/schema.json",
     "pipeline": {
         "build": {
-            "dependsOn": ["^build"],
+            "dependsOn": ["lint", "^build"],
             "outputs": ["dist/**", ".next/**"]
+        },
+        "controller#build": {
+            "env": ["SESSION_SECRET", "PORT", "DATABASE_URL", "REDIS_HOST"]
         },
         "lint": {
             "outputs": []
+        },
+        "generate": {
+            "env": ["DATABASE_URL"],
+            "cache": false
+        },
+        "migrate": {
+            "env": ["DATABASE_URL"],
+            "cache": false
         },
         "dev": {
             "cache": false
         },
         "test": {
-            "outputs": []
+            "outputs": ["coverage/**"],
+            "outputMode": "full"
+        },
+        "controller#test": {
+            "env": ["SESSION_SECRET", "PORT", "DATABASE_URL", "REDIS_HOST"]
         }
-    }
+    },
+    "globalEnv": ["NODE_ENV"]
 }
