--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,27 +4,14 @@ services:
         image: redis:7-alpine
         restart: always
         container_name: redis
-        networks:
-            - net
         ports: ["6379:6379"]
         volumes:
-            - /private/redis:/data
+            - ./private/redis:/data
     db:
         image: postgres:14-alpine
         restart: always
         container_name: postgres
         env_file: ".env"
-        networks:
-            - net
         ports: ["5432:5432"]
         volumes:
-            - /private/pgdata:/var/lib/postgresql/data
-    view:
-        build:
-            context: .
-            dockerfile: ./apps/view/Dockerfile
-        restart: always
-        networks:
-            - net
-networks:
-    net:
+            - ./private/pgdata:/var/lib/postgresql/data
