--- a/apps/controller/package.json
+++ b/apps/controller/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": "nodemon -w src --ext ts --exec ts-node-esm src/index.ts",
         "build": "tsc --project ./",
-        "start": "node dist/index.js",
+        "start": "ts-node dist/index.js",
         "lint": "eslint . --ext .js,.ts --fix",
         "test:integration": "jest int",
         "test:unit": "echo 'no unit tests'",
