--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     ],
     "scripts": {
         "build": "turbo run build",
+        "start:exec": "turbo run start",
+        "start": "yarn docker:up:dev && (yarn migrate && yarn start:exec); ret_code=$?; yarn docker:down:dev; exit $ret_code",
         "generate": "export $(grep -v '^#' .env | xargs) && turbo run generate",
         "migrate": "turbo run migrate",
-        "dev:exec": "yarn generate && turbo run dev --parallel",
         "lint": "turbo run lint --ignore=\"eslint-config-custom\" --ignore=\"tsconfig\"",
         "test:exec": "turbo run test --ignore=\"eslint-config-custom\" --ignore=\"tsconfig\"",
         "test": "yarn docker:up:test && (yarn migrate && yarn test:exec); ret_code=$?; yarn docker:down:test; exit $ret_code",
@@ -22,6 +23,7 @@
         "docker:down:dev": "docker-compose -f docker-compose.dev.yml down",
         "docker:up": "docker-compose up -d",
         "docker:down": "docker-compose down",
+        "dev:exec": "yarn generate && turbo run dev --parallel",
         "dev": "yarn docker:up:dev && (yarn migrate && yarn dev:exec); ret_code=$?; yarn docker:down:dev; exit $ret_code"
     },
     "devDependencies": {
