--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,9 @@
 {
     "$schema": "https://turborepo.org/schema.json",
     "pipeline": {
+        "start": {
+            "dependsOn": ["build"]
+        },
         "build": {
             "dependsOn": ["lint", "^build"],
             "outputs": ["dist/**", ".next/**"]
