--- a/apps/view/Dockerfile
+++ b/apps/view/Dockerfile
@@ -38,7 +38,7 @@ COPY --from=installer /app/apps/view/package.json .
 
 # Automatically leverage output traces to reduce image size 
 # https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=installer --chown=nextjs:nodejs /app/apps/view/.next/standalone ./
-COPY --from=installer --chown=nextjs:nodejs /app/apps/view/.next/static ./apps/view/.next/static
+# COPY --from=installer --chown=nextjs:nodejs /app/apps/view/.next/standalone ./
+# COPY --from=installer --chown=nextjs:nodejs /app/apps/view/.next/static ./apps/view/.next/static
 
 CMD node apps/view/server.js
