--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
             "dependsOn": ["build"]
         },
         "build": {
-            "dependsOn": ["lint", "^build"],
+            "dependsOn": ["^build"],
             "outputs": ["dist/**", ".next/**"]
         },
         "controller#build": {
