--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -44,7 +44,7 @@ server {
         add_header X-Cache-Status $upstream_cache_status;
     }
 
-    location /controller {
+    location /api/ {
         proxy_pass http://controller_upstream/;
     }
 
