--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=movies
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/movies"
+NEXT_PUBLIC_API=http://localhost:8080
