--- a/apps/controller/Dockerfile
+++ b/apps/controller/Dockerfile
@@ -16,13 +16,18 @@ WORKDIR /app
 
 # First install dependencies (as they change less often)
 COPY .gitignore .gitignore
+COPY .env .env
 COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/yarn.lock ./yarn.lock
+
 RUN yarn install
 
 # Build the project and its dependencies
 COPY --from=builder /app/out/full/ .
 COPY turbo.json turbo.json
+
+RUN cd /app/apps/model && npx prisma generate
+
 RUN yarn turbo run build --filter=controller...
 
 FROM node AS runner
@@ -34,4 +39,8 @@ RUN adduser --system --uid 1001 expressjs
 USER expressjs
 COPY --from=installer /app .
 
-CMD node apps/controller/dist/index.js
+RUN yarn global add ts-node
+
+EXPOSE 8080
+
+CMD node_modules/.bin/prisma migrate deploy --schema apps/model/prisma/schema.prisma && node_modules/.bin/ts-node-esm apps/controller/dist/index.js
