--- a/apps/controller/package.json
+++ b/apps/controller/package.json
@@ -21,6 +21,7 @@
         "ioredis": "^5.2.3",
         "model": "*",
         "morgan": "^1.10.0",
+        "rate-limiter-flexible": "^2.3.11",
         "validation-n-types": "*"
     },
     "devDependencies": {
