--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_DB=movies
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/movies"
 NEXT_PUBLIC_API=http://localhost:8080
+
+SESSION_SECRET=session_secret
+CORS_ORIGIN=http://localhost:3000
