--- a/apps/view/package.json
+++ b/apps/view/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
-        "build": "next build",
+        "dev": "dotenv -e ../../.env next dev",
+        "build": "dotenv -e ../../.env next build",
         "start": "next start",
         "lint": "next lint",
         "test": "echo 'no tests yet :('"
@@ -25,6 +25,7 @@
         "@types/react": "18.0.17",
         "@types/react-dom": "^18.0.6",
         "autoprefixer": "^10.4.12",
+        "dotenv-cli": "^7.2.1",
         "eslint": "7.32.0",
         "eslint-config-custom": "*",
         "jest": "^29.1.2",
