--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
             dockerfile: ./nginx/Dockerfile
         restart: always
         ports:
-            - 80:80
+            - 1337:80 # change it to 80:80 for prod
             - 443:443
         networks:
             - net
